// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/SnackbarBase/Title should renders correctly with titleFont 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#444B5A",
        "fontFamily": "Inter-Medium",
        "fontSize": 24,
        "lineHeight": 30,
        "minHeight": 30,
      },
      [
        {
          "flex": 1,
          "paddingRight": 12,
        },
        {
          "backgroundColor": "#000",
        },
      ],
    ]
  }
>
  title two
</Text>
`;

exports[`@lad-tech/mobydick-core/SnackbarBase/Title should renders correctly without titleFont 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFF",
        "fontFamily": "Inter-Medium",
        "fontSize": 21,
        "lineHeight": 27,
        "minHeight": 27,
      },
      [
        {
          "flex": 1,
          "paddingRight": 12,
        },
        {
          "flex": 1,
        },
      ],
    ]
  }
>
  title
</Text>
`;
